Fix CSS Layout issues

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -223,10 +223,9 @@ body {
 
 .dashboard-content {
   grid-area: content;
-  margin-left: 20px;
   margin-top: 70px;
   height: calc(100vh - 70px);
-  width: calc(100vw - 100px);
+  width: calc(100vw - 80px);
   overflow-y: auto;
 }
 
@@ -1113,6 +1112,11 @@ body {
   overflow: hidden;
   text-overflow: ellipsis;
   line-clamp: 2;
+  font-size: 0.85rem;
+  color: var(--text-secondary);
+  line-height: 1.3;
+  margin-bottom: 1rem;
+
 }
 
 .main-block-section-title {
@@ -1787,15 +1791,15 @@ html, body, #root {
   color: var(--text-primary);
   font-weight: 600;
   margin-bottom: 0.2rem;
-  white-space: nowrap;
+  /* white-space: nowrap; */
   overflow: hidden;
-  text-overflow: ellipsis;
+  text-overflow: wrap;
   max-width: 70px;
 }
 
 .user-email {
   color: var(--text-secondary);
-  font-size: 0.6rem;
+  font-size: 0.7rem;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
